<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_background"
        android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageLoginIcon"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/ic_new_app_icon"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/pug_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/login_app_title"
            android:id="@+id/textLoginAppName"
            android:layout_centerHorizontal="true"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_below="@+id/imageLoginIcon"
            android:layout_marginTop="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/login_app_description"
            android:id="@+id/textLoginAppDescription"
            android:textColor="@color/dark"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_below="@+id/textLoginAppName"
            android:layout_centerHorizontal="true"
            android:typeface="serif"
            android:layout_marginTop="0dp" />

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_margin="16dp"
            android:padding="16dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="2dp"
            app:cardPreventCornerOverlap="false"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:id="@+id/loginPanel"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/login_take_tour"
                        android:id="@+id/textLoginTour"
                        android:drawablePadding="8dp"
                        android:textColor="@color/dark_gray"
                        android:textSize="15sp"
                        android:layout_gravity="center_vertical" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:src="@drawable/ic_tour"
                        android:clickable="true"
                        android:layout_marginLeft="8dp"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content"
                        android:background="@drawable/tour_selector"
                        android:contentDescription="@string/tour_icon_description"
                        android:id="@+id/imageLoginTour" />
                </LinearLayout>

                <TextView
                    android:layout_below="@+id/loginPanel"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/sign_with_facebook"
                    android:id="@+id/buttonLoginFacebook"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:drawableStart="@drawable/ic_facebook"
                    android:drawableLeft="@drawable/ic_facebook"
                    android:drawablePadding="16dp"
                    android:paddingLeft="8dp"
                    android:paddingBottom="2dp"
                    android:paddingTop="2dp"
                    android:textSize="16sp"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/fb_button_selector"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:clickable="true"
                    android:textColor="@color/white"
                    android:focusable="true"
                    android:textSize="16sp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/log_in"
                    android:gravity="center_horizontal|center_vertical"
                    android:background="@drawable/button_selector"
                    android:id="@+id/buttonLogin"
                    android:layout_marginTop="16dp"
                    android:layout_below="@+id/buttonLoginFacebook"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/login_bottom_panel_shape"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="16dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/line" />

                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:entries="@array/language"
                        android:id="@+id/spinnerLoginLanguage"
                        android:background="@drawable/spinner_item_selector"
                        android:layout_gravity="center_horizontal|center_vertical" />
                </LinearLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>